--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -100,7 +100,7 @@
         border-radius: 50%;
         transition: transform $main-transition-time;
         transform: scale(0);
-        transform-origin: left;
+        transform-origin: center;
       }
 
       &:hover::after {
