--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,214 @@
 @import 'fonts';
 @import 'typography';
 
+$color-orange: #f9512e;
+$color-darkorange: #b2341a;
+$color-pink: #ffeefc;
+$size-desktop: 1200px;
+$size-tablet: 1024px;
+$size-mobile: 640px;
+
 body {
-  background: $c-gray;
+  margin: 0;
+  background-color: $color-pink;
+  color: #1c1a26;
+  font-family: Inter, sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.header {
+  padding: 28px 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (max-width: $size-tablet) {
+    padding: 16px;
+  }
+
+  &_logo {
+    width: 136px;
+    height: 32px;
+  }
+
+  &_nav {
+    list-style: none;
+    display: flex;
+    gap: 64px;
+
+    @media (max-width: $size-tablet) {
+      display: none;
+    }
+  }
+
+  & a {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    @media (min-width: $size-tablet) {
+      display: none;
+    }
+
+    // & img {
+    //   width: 24px;
+    //   height: 24px;
+    // }
+  }
+}
+
+.content {
+  padding: 144px 44px 56px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  @media (max-width: $size-desktop) {
+    padding: 135px 44px 152px;
+  }
+
+  @media (max-width: $size-tablet) {
+    padding: 80px 44px 152px;
+  }
+
+  @media (max-width: $size-mobile) {
+    padding: 32px 16px 72px;
+  }
+}
+
+.firstSection {
+  max-width: 1192px;
+  position: relative;
+  width: 100%;
+  height: 612px;
+  display: flex;
+  flex-direction: column;
+
+  @media (max-width: $size-tablet) {
+    height: 836px;
+  }
+
+  @media (max-width: $size-mobile) {
+    height: 542px;
+  }
+
+  & img {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -144px;
+    z-index: -1;
+    width: 584px;
+    height: 586px;
+
+    @media (max-width: $size-desktop) {
+      width: 544px;
+      height: 546px;
+      top: -135px;
+    }
+
+    @media (max-width: $size-tablet) {
+      width: 326px;
+      height: 328px;
+      top: 64px;
+    }
+
+    @media (max-width: $size-mobile) {
+      width: 288px;
+      height: 290px;
+      top: 188px;
+    }
+  }
+
+  & span {
+    display: inline-block;
+    letter-spacing: -0.01em;
+    width: 280px;
+
+    @media (max-width: $size-desktop) {
+      width: 260px;
+    }
+
+    @media (max-width: $size-tablet) {
+      width: 280px;
+    }
+
+    @media (max-width: $size-mobile) {
+      text-align: center;
+      width: 288px;
+      margin: 0 auto;
+    }
+  }
+
+  & h1 {
+    width: 100%;
+    font-size: 144px;
+    line-height: 85%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: $color-orange;
+    margin: 40px 0 64px;
+    font-weight: 400;
+    font-family: Inter, sans-serif;
+    font-optical-sizing: auto;
+    text-align: center;
+
+    @media (max-width: $size-desktop) {
+      font-size: 136px;
+      margin-top: 8px;
+    }
+
+    @media (max-width: $size-tablet) {
+      font-size: 80px;
+      margin: 146px 0 210px;
+    }
+
+    @media (max-width: $size-mobile) {
+      font-size: 64px;
+      margin: 32px auto 290px;
+      max-width: 288px;
+    }
+  }
+
+  & button {
+    cursor: pointer;
+    width: 280px;
+    height: 56px;
+    border: 2px solid $color-orange;
+    border-radius: 32px;
+    color: $color-orange;
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: $color-pink;
+
+    @media (max-width: $size-desktop) {
+      width: 260px;
+    }
+
+    @media (max-width: $size-tablet) {
+      width: 326px;
+      margin: 0 auto;
+    }
+
+    @media (max-width: $size-mobile) {
+      width: 288px;
+    }
+
+    &:hover {
+      background-color: $color-orange;
+      color: white;
+    }
+
+    &:focus {
+      background-color: $color-darkorange;
+      border: 2px solid $color-darkorange;
+      color: white;
+    }
+  }
 }
