--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@ $color-orange: #f9512e;
 $color-darkorange: #b2341a;
 $color-pink: #ffeefc;
 $color-black: #1c1a26;
+$color-white: #ffffff;
 $color-gray: #7f8096;
 $size-desktop: 1200px;
 $size-tablet: 1024px;
@@ -318,6 +319,11 @@ body {
       width: 100%;
     }
   }
+
+  &--footer {
+    color: $color-white;
+    margin-bottom: 40px;
+  }
 }
 
 .product {
@@ -465,5 +471,77 @@ body {
         letter-spacing: -0.05em;
       }
     }
+  }
+}
+
+.footerContent {
+  background-color: $color-black;
+  color: $color-white;
+  display: flex;
+  max-width: 1192;
+  justify-content: center;
+  padding: 88px 44px;
+
+  @media (max-width: $size-mobile) {
+    flex-direction: column;
+    gap: 64px;
+    padding: 56px 16px;
+  }
+
+  &_item {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+
+    @media (max-width: $size-mobile) {
+      width: 100%;
+    }
+  }
+}
+
+.footerLogo {
+  margin-bottom: 55px;
+
+  @media (max-width: $size-tablet) {
+    margin-bottom: 39px;
+  }
+
+  @media (max-width: $size-mobile) {
+    margin-bottom: 40px;
+  }
+}
+
+.footerLists {
+  display: flex;
+  justify-content: space-between;
+
+  @media (max-width: $size-mobile) {
+    flex-direction: column;
+    gap: 40px;
+  }
+}
+
+.footerList {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  min-width: 50%;
+
+  &_title {
+    color: $color-gray;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 100%;
+    cursor: default;
+  }
+
+  &_link {
+    text-decoration: none;
+    color: $color-white;
   }
 }
