--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@ $color-orange: #f9512e;
 $color-darkorange: #b2341a;
 $color-pink: #ffeefc;
 $color-black: #1c1a26;
-$color-white: #ffffff;
+$color-white: #fff;
 $color-gray: #7f8096;
 $size-desktop: 1200px;
 $size-tablet: 1024px;
