fixed all comments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,10 @@ body {
   font-style: normal;
   font-size: 16px;
   line-height: 150%;
+
+  &:has(input:checked) {
+    overflow: hidden;
+  }
 }
 
 .header {
@@ -606,6 +610,10 @@ body {
   &_link {
     text-decoration: none;
     color: $color-white;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
