--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,81 @@
+@import 'mixins';
+
 %h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 64px;
+  line-height: 85%;
+
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-desktop {
+    font-size: 136px;
+  }
+
+  @include on-desktop-xl {
+    font-size: 144px;
+  }
+}
+
+%h2 {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 85%;
+
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+%big-text {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: 85%;
+
+  /* identical to box height, or 82px */
+
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+}
+
+%body-text {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 150%;
+
+  /* identical to box height, or 24px */
+
+  letter-spacing: -0.01em;
+}
+
+%uppercase {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+
+  /* identical to box height, or 16px */
+
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
 }
