--- a/src/styles/blocks/_about-us.scss
+++ b/src/styles/blocks/_about-us.scss
@@ -21,6 +21,8 @@
 
   @include respond-to(desktop) {
     row-gap: 144px;
+  margin-top: 178px;
+
   }
   &__info {
     display: flex;
@@ -33,6 +35,10 @@
       grid-template-columns: repeat(8, 1fr);
       flex-direction: row;
       gap: 24px;
+    }
+
+    @include respond-to(desktop) {
+      margin-bottom: 72px;
     }
   }
 
