--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './utils/vars';
+@import './utils/normalize';
+@import './utils/mixins';
+@import 'blocks/container';
+@import 'blocks/header';
+@import 'blocks/top-bar';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/icons';
+@import 'blocks/page';
+@import 'blocks/button';
+@import 'blocks/products';
+@import 'blocks/about';
+@import 'blocks/footer';
