--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
-$c-gray: #eee;
+:root {
+  --light-pink: #ffeefc;
+  --accent-orange: #f9512e;
+  --shadow: 1px 1px 2px #000, 0 0 12px #f9512e, 0 0 5px #b2341a;
+}
+
+$darkOrange: #b2341a;
+$lightOrange: #fba28f;
+$lightBlue: #eef7ff;
+$black: #1c1a26;
+$gray: #7f8096;
+$white: #fff;
+$tablet-min-width: 768px;
+$desktop-min-width: 1200px;
+$bigDesktop-min-width: 1440px;
