--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './utils/normalize';
+@import './utils/vars';
+@import './utils/mixins';
+@import './utils/extends';
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/wrapper';
+@import './blocks/nav';
+@import './blocks/menu';
+@import './blocks/cake';
+@import './blocks/main';
+@import './blocks/products';
+@import './blocks/product-card';
+@import './blocks/about-us';
+@import './blocks/footer';
