--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$big-desktop-min-width: 1440px;
+$grid-columns-mobile: 2;
+$grid-columns-tablet: 8;
+$grid-gap-mobile: 16px;
+$grid-gap-tablet: 24px;
+$color-primary: #f9512e; // основний акцентний
+$color-secondary: #7f8096; // сірий текст
+$color-dark: #1c1a26; // основний темний текст
+$color-bg: #ffeefc; // фон
+$color-white: #fff; // білий
+$color-focused: #b2341a; // фокус кнопок
+$animation-speed: 0.3s;
