--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/page';
+@import './blocks/icon';
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/nav';
+@import './blocks/menu';
+@import './blocks/products';
+@import './blocks/main';
+@import './blocks/section';
+@import './blocks/item';
+@import './blocks/about-us';
+@import './blocks/stats';
+@import './blocks/footer';
