--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './utils.scss';
+@import './fonts.scss';
+@import './typography.scss';
+@import '../styles/blocks/page';
+@import '../styles/blocks/menu';
+@import '../styles/blocks/header';
+@import '../styles/blocks/nav';
+@import '../styles/blocks/icons';
+@import '../styles/blocks/first-screen.scss';
+@import '../styles/blocks/bake.scss';
+@import '../styles/blocks/about-us';
+@import '../styles/blocks/footer';
+@import '../styles/blocks/flip.scss';
