--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,14 +1,18 @@
 .page {
   scroll-behavior: smooth;
   background-color: lightpink;
-
+  max-width: 1440px;
+  margin: auto;
+  // align-items: center;
+  // align-content: center;
   &:has(.page__menu:target) {
     overflow: hidden;
   }
 
-// &__body {
-  // background-color:lightpink;
-// }
+   // &__body {
+    // max-width: 1200px;
+   // background-color:lightpink;
+   // }
 
   &__menu {
     position: fixed;
