--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,4 +1,3 @@
-
 @mixin on-tablet {
   @media (min-width: $min-width-on-tablet) {
     @content;
@@ -16,12 +15,12 @@
     @content;
   }
 }
+
 @mixin on-big-desktop {
   @media (min-width: $min-width-on-big-desktop) {
     @content;
   }
 }
-
 
 @mixin content-padding-inline {
   padding-inline: 16px;
@@ -30,8 +29,9 @@
     padding-inline: 44px;
   }
 
- @include on-small-desktop { // not ();
-     padding-inline: 84px;
+  @include on-small-desktop {
+    // not ();
+    padding-inline: 84px;
   }
 
   @include on-desktop {
