--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1200px;
+$desktop-max-width: 1440px;
+$grid-gap-xl: 24px;
+$fixed-column-width: 128px;
+$color-button: #f9512e;
+$color-gray: #7f8096;
+$color-white: #fff;
+$color-blue: #eef7ff;
+$color-dark-red: #b2341a;
+$color-disabled-text: #fba28f;
