add code, styles and script to create landing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,47 @@
 @import 'utils';
-@import 'fonts';
 @import 'typography';
+@import './blocks/header';
+@import './blocks/icons';
+@import './blocks/product-card';
+@import './blocks/what-we-bake';
+@import './blocks/about-us';
+@import './blocks/footer';
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  cursor: default;
+}
+
+.page {
+  scroll-behavior: smooth;
+
+  &__body {
+    &--menu-open {
+      overflow: hidden;
+    }
+  }
+}
 
 body {
-  background: $c-gray;
+  font-family: Inter, sans-serif;
+  background: $light-pink;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+button {
+  background: none;
+  cursor: pointer;
+}
+
+.logo {
+  display: block;
+  height: 100%;
+  cursor: pointer;
 }
