--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,16 @@
-$c-gray: #eee;
+$dark-orange: #B2341A;
+$accent-orange: #F9512E;
+$light-orange: #FBA28F;
+$light-pink: #FFEEFC;
+$light-blue: #EEF7FF;
+$black: #1C1A26;
+$gray: #7F8096;
+$white: #FFF;
+$phone-width: 320px;
+$tablet-width: 640px;
+$desktop-width: 1024px;
+$top-bar-height: 64px;
+$button-height: 56px;
+$button-width-on-phone: 288px;
+$button-width-on-tablet: 326px;
+$button-width-on-desktop: 300px;
