--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,37 @@
 %h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 85%;
+  letter-spacing: -5%;
+  text-transform: uppercase;
+  color: $accent-orange;
+}
+
+%big-text {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: 85%;
+  letter-spacing: -0.05em;
+}
+
+%body-text {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: -0.01em;
+}
+
+%uppercase {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
 }
