move menu into aside block

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,7 +6,7 @@
   background-color: $black;
   color: $white;
 
-  &__logo-link {
+  &__logo {
     grid-column: 1 / -1;
     grid-row: 1;
 
@@ -21,9 +21,8 @@
     }
   }
 
-  &__logo {
-    display: block;
-    width: 168px;
+  &__logo-img {
+    @include logo-img-properties(168px);
   }
 
   &__title {
@@ -103,7 +102,7 @@
 
   &__social-media {
     @include flex-container(row, unset, 32px);
-    
+
     grid-row: 6;
     grid-column: 1 / 1;
 
