--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,32 +1,22 @@
 @import 'utils';
 @import 'typography';
+@import './blocks/page';
 @import './blocks/header';
-@import './blocks/icons';
-@import './blocks/product-card';
+@import './blocks/aside';
 @import './blocks/what-we-bake';
 @import './blocks/about-us';
 @import './blocks/footer';
+@import './blocks/top-bar';
+@import './blocks/nav';
+@import './blocks/product-card';
+@import './blocks/icons';
 
 * {
   box-sizing: border-box;
+}
+
+h2 {
   margin: 0;
-  padding: 0;
-  cursor: default;
-}
-
-.page {
-  scroll-behavior: smooth;
-
-  &__body {
-    &--menu-open {
-      overflow: hidden;
-    }
-  }
-}
-
-body {
-  font-family: Inter, sans-serif;
-  background: $light-pink;
 }
 
 a {
@@ -37,11 +27,5 @@ a {
 
 button {
   background: none;
-  cursor: pointer;
-}
-
-.logo {
-  display: block;
-  height: 100%;
   cursor: pointer;
 }
