--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -20,12 +20,12 @@
   transition: background-image 0.3s;
 
   &:hover {
-      cursor: pointer;
+    cursor: pointer;
     background-image: url($url);
   }
 
   &:focus {
-     cursor: pointer;
+    cursor: pointer;
     background-image: url($url);
   }
 }
@@ -115,4 +115,11 @@
   flex-direction: $direction;
   justify-content: $justify-content;
   gap: $gap-value;
+}
+
+@mixin logo-img-properties($width) {
+  display: block;
+  // height: 100%;
+  cursor: pointer;
+  width: $width;
 }
