--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,88 @@
+@import 'utils';
+
 h1 {
-  @extend %h1;
+  margin: 0;
+
+  font-family: Inter, sans-serif;
+  font-size: 64px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  color: $accent-color;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-desktop {
+    font-size: 130px;
+  }
+
+  @include on-big-desktop {
+    font-size: 144px;
+  }
+}
+
+h2 {
+  margin: 0;
+
+  font-family: Inter, sans-serif;
+  font-size: 48px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  color: $accent-color;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+.bigText {
+  font-family: Inter, sans-serif;
+  font-size: 96px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+
+  &--accent-color {
+    color: $accent-color;
+  }
+}
+
+.bodyText {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 150%;
+  letter-spacing: -0.01em;
+}
+
+.uppercase {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 100%;
+  text-transform: uppercase;
+  letter-spacing: 0.02em;
+}
+
+p {
+  margin: 0;
+}
+
+.title {
+  color: $gray;
 }
