--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,39 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/content';
+@import 'blocks/pages';
+@import 'blocks/layout';
+@import 'blocks/components';
+@import 'blocks/topbar';
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  overflow-x: hidden;
+
+  &:has(.sidebar:target) {
+    overflow: hidden;
+  }
+}
 
 body {
-  background: $c-gray;
+  margin: 0;
+  background: $background-color;
+}
+
+.logo {
+  width: 136px;
+  height: 32px;
+
+  @include hover(transform, scale(1.2));
+}
+
+a {
+  text-decoration: none;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
 }
