created header and menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,415 @@
 @import 'fonts';
 @import 'typography';
 
-body {
-  background: $c-gray;
+@mixin on-tablet {
+  @media (min-width: 576px) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin content-padding-inline() {
+  padding-inline: 16px;
+
+  @include on-tablet {
+    padding-inline: 44px;
+  }
+
+  @include on-desktop {
+    max-width: 1200px;
+    margin-inline: auto;
+    padding-inline: 44px;
+  }
+}
+
+@mixin hover($property, $toValue) {
+  transition: #{$property} 0.3s;
+  &:hover {
+    #{$property}: $toValue;
+  }
+}
+
+@mixin h1-style {
+  font-family: Inter, sans-serif;
+  font-size: 64px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-desktop {
+    font-size: 144px;
+  }
+}
+
+@mixin h2-style {
+  font-family: Inter, sans-serif;
+  font-size: 48px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+@mixin big-text {
+  font-family: Inter, sans-serif;
+  font-size: 96px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+@mixin uppercase {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 100%;
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+}
+
+@mixin main-text {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 150%;
+  letter-spacing: -0.01em;
+}
+
+.page {
+  scroll-behavior: smooth;
+  color: #1c1a26;
+
+  @include main-text;
+
+  &__body {
+    margin: 0;
+    background-color: #eef7ff;
+  }
+  &__menu {
+    pointer-events: none;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    transform: translateX(-100%);
+
+    opacity: 0;
+
+    transition: all 0.3s;
+
+    &:target {
+      pointer-events: all;
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+.container {
+  @include content-padding-inline;
+}
+
+.top-bar {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding-block: 16px;
+
+  @include on-desktop {
+    padding-block: 28px;
+  }
+
+  &__logo {
+    display: flex;
+    width: 136px;
+    height: 32px;
+
+    @include hover(transform, scale(1.2));
+  }
+
+  &__navs {
+    display: flex;
+    gap: 64px;
+  }
+  &__nav {
+    display: none;
+    color: #1c1a26;
+    text-decoration: none;
+
+    @include main-text;
+
+    &:nth-last-child(2) {
+      @include on-desktop {
+        display: flex;
+        gap: 4px;
+        align-items: center;
+        justify-content: center;
+
+        color: #f9512e;
+
+        @include uppercase;
+      }
+    }
+
+    @include on-desktop {
+      display: inline-block;
+    }
+  }
+  &__icon {
+    width: 24px;
+    height: 24px;
+
+    background-image: url(../images/icons/icon-phone.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
+.header {
+  background-color: #eef7ff;
+  background-image: url('../images/cookie.png');
+  background-repeat: no-repeat;
+  background-position: center 80%;
+  background-size: 288px 290px;
+
+  @include on-tablet {
+    background-position: center 68%;
+  }
+
+  @include on-desktop {
+    background-position: center 35%;
+    background-size: 544px 546px;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+
+  &__bottom {
+    margin: 0;
+    padding-bottom: 40px;
+
+    @include on-tablet {
+      padding-bottom: 228px;
+    }
+
+    @include on-desktop {
+      padding-bottom: 161px;
+    }
+  }
+  &__subtitle {
+    @include main-text;
+
+    margin: 0;
+    margin-top: 32px;
+    color: #1c1a26;
+    text-align: center;
+
+    @include on-tablet {
+      margin-top: 80px;
+      padding-right: 400px;
+      text-align: left;
+    }
+
+    @include on-desktop {
+      margin-top: 135px;
+      padding-right: 852px;
+      text-align: left;
+    }
+  }
+  &__title {
+    display: flex;
+    justify-content: center;
+
+    margin: 0;
+    margin-top: 32px;
+
+    color: #1c1a26;
+    text-align: center;
+
+    @include h1-style;
+
+    @include on-tablet {
+      margin-top: 146px;
+    }
+
+    @include on-desktop {
+      margin-top: 8px;
+
+      font-size: 136px;
+      font-weight: 400;
+      line-height: 85%;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: -0.05em;
+    }
+  }
+  &__button {
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+    height: 56px;
+    margin: 0;
+    margin-top: 290px;
+    border: 2px solid #f9512e;
+    border-radius: 32px;
+
+    @include on-tablet {
+      margin: 210px 177px 0;
+    }
+
+    @include on-desktop {
+      margin: 64px 852px 0 0;
+    }
+  }
+  &__icon {
+    width: 24px;
+    height: 24px;
+
+    background-image: url(../images/icons/icon-cookie.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  &__link {
+    color: #f9512e;
+    text-decoration: none;
+
+    @include uppercase;
+  }
+}
+
+.menu {
+  box-sizing: border-box;
+
+  // height: 100vh;
+  // font-family: Inter, sans-serif;
+  background-color: #eef7ff;
+
+  &__top {
+    margin-bottom: 132px;
+  }
+
+  &__nav {
+    margin-bottom: 24px;
+  }
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+
+  &__content {
+    @include content-padding-inline;
+  }
+}
+
+.nav__link {
+  position: relative;
+
+  display: block;
+
+  color: inherit;
+  text-decoration: none;
+
+  transition: transform 0.3s;
+
+  // font-weight: 400;
+  // font-size: 16px;
+  // line-height: 150%;
+  // letter-spacing: -1%;
+  @include main-text;
+
+  @include hover(transform, scale(1.2));
+
+  &--contact {
+    padding-left: 28px;
+
+    color: #f9512e;
+
+    background-image: url(../images/icons/icon-phone.svg);
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 24px 24px;
+
+    // text-transform: uppercase;
+    @include uppercase;
+  }
+}
+
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+
+  margin: 0;
+  padding: 0;
+
+  text-align: center;
+  list-style: none;
+}
+
+.icon {
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+
+  @include hover(transform, scale(1.2));
+
+  &--close {
+    background-image: url(../images/icons/icon-close.svg);
+  }
+  &--contact {
+    padding: 0;
+
+    color: transparent;
+
+    background-image: url(../images/icons/icon-menu.svg);
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 24px 24px;
+
+    @include on-desktop {
+      display: none;
+    }
+  }
 }
